--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,22 @@
-markdown: redcarpet
-baseurl: /jekyll-blog
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+
+
+#Site settings
+title: Learn C with Me
+email: friendyankan@gmail.com
+description: > # On this site, I am sharing the tutorials on C
+    written by me. The tutorials start from a very beginner level
+    and move to advanced topics as we go along.
+baseurl: "/learncwithme"
+url: "http://yourdomain.com"
+github_username: ankan17
+
+#Build settings
+markdown: kramdown
 exclude: ["README.md"]
