--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,12 @@ email: friendyankan@gmail.com
 description: > # On this site, I am sharing the tutorials on C
     written by me. The tutorials start from a very beginner level
     and move to advanced topics as we go along.
-#baseurl: "https://ankan17.github.io/learncwithme"
-baseurl: ""
+baseurl: "https://ankan17.github.io/learncwithme"
+# baseurl: ""
 url: "http://yourdomain.com"
 github_username: ankan17
 
 #Build settings
 markdown: kramdown
 exclude: ["README.md"]
+permalink: pretty
