--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,6 +17,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Meta", name: "meta", widget: "string"}
       - {label: "Description", name: "description", widget: "text"}
+      - {label: "Link", name: "link", widget: "string", required: "false"}
       - {label: "Comments", name: "comments", widget: "hidden", default: "true"}
       - {label: "Category", name: "category", widget: "hidden", default: "c-tutorial-series"}
       - {label: "Body", name: "body", widget: "markdown"}
@@ -32,7 +33,7 @@ collections:
       - {label: "Sub-Category", name: "sub-category", widget: "hidden", default: "code-like-pro"}
       - {label: "Serial", name: "serial", widget: "number"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Link", name: "link", widget: "string"}
+      - {label: "Link", name: "link", widget: "string", required: "false"}
       - {label: "Comments", name: "comments", widget: "hidden", default: "true"}
       - {label: "Body", name: "body", widget: "markdown"}
 
