--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,7 +13,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "posts"}
-      - {label: "Serial", name: "serial", widget: "number"}
+      - {label: "Serial", name: "serial", widget: "string"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Meta", name: "meta", widget: "string"}
       - {label: "Description", name: "description", widget: "text"}
@@ -31,7 +31,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "code-like-pro"}
       - {label: "Category", name: "category", widget: "hidden", default: "practice"}
       - {label: "Sub-Category", name: "sub-category", widget: "hidden", default: "code-like-pro"}
-      - {label: "Serial", name: "serial", widget: "number"}
+      - {label: "Serial", name: "serial", widget: "string"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Link", name: "link", widget: "string", required: "false"}
       - {label: "Comments", name: "comments", widget: "hidden", default: "true"}
@@ -46,6 +46,6 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "crazy-with-c"}
       - {label: "Category", name: "category", widget: "hidden", default: "practice"}
       - {label: "Sub-Category", name: "sub-category", widget: "hidden", default: "crazy-with-c"}
-      - {label: "Serial", name: "serial", widget: "number"}
+      - {label: "Serial", name: "serial", widget: "string"}
       - {label: "Comments", name: "comments", widget: "hidden", default: "true"}
       - {label: "Body", name: "body", widget: "markdown"}
